--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@karinjs/plugin-puppeteer": "^1.0.17"
+    "@karinjs/plugin-puppeteer": "^1.0.17",
+    "emoji-regex": "^10.5.0"
   }
 }
